    just save the incoming mbs event into ROOT tree without copying the data: 
    added method TGo4MbsEvent::AssignReference() allows to use TGo4MbsEvent as a "reference" to another 
    TGo4MbsEvent; added constructor TGo4MbsEvent(const char*) to use it with standard factory
11. Bugfix in TGo4MbsEvent: memory leak in subevent array when reading back from TTree

Changes in Go4 v4.4.1 (May 2010)
1. Default implementation for TGo4Parameter methods are provided. 
   Now Clear(), PrintParameter() and UpdateFrom() methods has meaningful
   functionality and can be used as is in user derived classes.
   Thus, it is possible to declare user parameter class without any additional methods.
   See Go4ExampleSimple and Go4Example1Step. 
2. Add support of arbitrary objects in TGo4Picture::AddSpecialObject, 
   show real picture size in the browser   
3. Add possibility to specify wildcard in TGo4EventSource class - 
   allow to treat many subsequent root files, improve wildcard treatment in TGo4MbsFile,
   provide wildcard functionality for Windows
4. Fix (implement) "-source" argument for go4analysis
5. Fix problem with TASImage zooming, allow to switch palette on/off in asimage mode    
6. Improvements in fitpanel, that it can correctly display fitters, produced by examples
7. Keep and restore panel name in hotstart file. 
8. Support UserGUI in Win32, solve windows export/import problems
9. Allow to configure default draw options for classes like TH1/2/3, TGraph
10.Support of MacOS X (Darwin)
11.Add to TGo4Analysis static methods IsBatchMode(), IsClientMode(), IsServerMode(), 
   returning running mode of the analysis. Variable set in go4analysis program 
   and therefore methods can be used already in user analysis constructor.
12.Provide meaningful implementation for TGo4Analysis::SendObjectToGUI method. 
   Now user can send any registered object (histogram, graph, condition) to gui, 